--- a/SampleChatAppClient/resources/clientUI.fxml
+++ b/SampleChatAppClient/resources/clientUI.fxml
@@ -17,7 +17,7 @@
                   <Button fx:id="serverButton" layoutX="81.0" layoutY="23.0" mnemonicParsing="false" text="Server" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="156.0" layoutY="10.0" maxWidth="500.0" minWidth="-Infinity" prefWidth="300.0" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" layoutX="156.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0">
                <children>
                   <Label text="Welcome!!">
                      <font>
