--- a/SampleChatAppClient/resources/clientUI.fxml
+++ b/SampleChatAppClient/resources/clientUI.fxml
@@ -10,14 +10,14 @@
    <children>
       <HBox minHeight="-Infinity" prefHeight="50.0" style="-fx-background-color: #71acd6;">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
-                  <Button fx:id="logoutButton" mnemonicParsing="false" text="Logout" />
-                  <Button fx:id="profileButton" mnemonicParsing="false" text="Profile" />
-                  <Button fx:id="serverButton" layoutX="81.0" layoutY="23.0" mnemonicParsing="false" text="Server" />
+                  <Button fx:id="logoutButton" minWidth="-Infinity" mnemonicParsing="false" text="Logout" />
+                  <Button fx:id="profileButton" minWidth="-Infinity" mnemonicParsing="false" text="Profile" />
+                  <Button fx:id="serverButton" layoutX="81.0" layoutY="23.0" minWidth="-Infinity" mnemonicParsing="false" text="Server" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="156.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" layoutX="156.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="400.0" spacing="10.0">
                <children>
                   <Label text="Welcome!!">
                      <font>
@@ -29,10 +29,13 @@
                         <Font size="18.0" />
                      </font></Label>
                </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
             </HBox>
             <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button fx:id="exitButton" mnemonicParsing="false" text="Exit" />
+                  <Button fx:id="exitButton" minWidth="-Infinity" mnemonicParsing="false" text="Exit" />
                </children>
             </HBox>
          </children>
